[fix] created github actions file

--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -4,7 +4,7 @@
       pull_request:
         types: [opened, reopened]
       push:
-        branches: ['main']
+        branches: ['*']
         tags: [ v* ]
     jobs:
       build:
