[fix] updated action

--- a/.github/workflows/build-eudi-lib-sdjwt-swift.yml
+++ b/.github/workflows/build-eudi-lib-sdjwt-swift.yml
@@ -9,7 +9,14 @@
   jobs:
     build:
       runs-on: macos-latest
+      strategy:
+        matrix:
+          os: [ubuntu-latest, macos-latest]
+          swift: ["5.8.0", "5.8"]
       steps:
+        - uses: swift-actions/setup-swift@v1
+          with:
+            swift-version: ${{ matrix.swift }}
         - uses: actions/checkout@v4
         - run:
             fastlane tests
