--- a/.github/workflows/build-eudi-lib-sdjwt-swift.yml
+++ b/.github/workflows/build-eudi-lib-sdjwt-swift.yml
@@ -9,14 +9,12 @@
   jobs:
     build:
       runs-on: macos-latest
-      strategy:
-        matrix:
-          os: [macos-latest]
-          swift: ["5.8"]
       steps:
         - uses: swift-actions/setup-swift@v1
           with:
-            swift-version: ${{ matrix.swift }}
+            swift-version: '5.8.1'
         - uses: actions/checkout@v4
-        - run:
+        - run: >
+            swift --version
+            
             fastlane tests
