[fix] updated action

--- a/.github/workflows/build-eudi-lib-sdjwt-swift.yml
+++ b/.github/workflows/build-eudi-lib-sdjwt-swift.yml
@@ -8,13 +8,16 @@
       tags: [ v* ]
   jobs:
     build:
-      runs-on: macos-latest
+      name: Swift ${{ matrix.swift }} on ${{ matrix.os }}
+      strategy:
+        matrix:
+          os: [macos-latest]
+          swift: ["5.8"]
+      runs-on: ${{ matrix.os }}
       steps:
         - uses: swift-actions/setup-swift@v1
           with:
-            swift-version: '5.8.1'
+            swift-version: ${{ matrix.swift }}
         - uses: actions/checkout@v4
-        - run: >
-            swift --version
-            
+        - run:
             fastlane tests
