[fix] added fastlane swift plugin

--- a/.github/workflows/swift-version.yml
+++ b/.github/workflows/swift-version.yml
@@ -21,7 +21,5 @@
             - name: Get swift version
               run: swift --version
             - uses: actions/checkout@v4
-            - run: >
-                fastlane swift
-                
+            - run:
                 fastlane tests
