--- a/.github/workflows/swift-version.yml
+++ b/.github/workflows/swift-version.yml
@@ -20,6 +20,9 @@
                 swift-version: ${{ matrix.swift }}
             - name: Get swift version
               run: swift --version
+            - uses: maxim-lobanov/setup-xcode@v1
+              with:
+                xcode-version: latest
             - uses: actions/checkout@v4
             - run:
                 fastlane tests
