--- a/.github/workflows/swift-version.yml
+++ b/.github/workflows/swift-version.yml
@@ -22,7 +22,7 @@
               run: swift --version
             - uses: maxim-lobanov/setup-xcode@v1
               with:
-                xcode-version: latest
+                xcode-version: '15.0'
             - uses: actions/checkout@v4
             - run:
                 fastlane tests
