--- a/.github/workflows/build-eudi-lib-sdjwt-swift.yml
+++ b/.github/workflows/build-eudi-lib-sdjwt-swift.yml
@@ -8,7 +8,7 @@
       tags: [ v* ]
   jobs:
     build:
-      runs-on: "macos-latest"
+      runs-on: "macos-13"
       steps:
         - uses: actions/checkout@v4
         - run:
