[fix] updated fastfile

--- a/.github/workflows/build-eudi-lib-sdjwt-swift.yml
+++ b/.github/workflows/build-eudi-lib-sdjwt-swift.yml
@@ -4,7 +4,7 @@
     pull_request:
       types: [opened, reopened]
     push:
-      branches: ['*']
+      branches: ['main']
       tags: [ v* ]
   jobs:
     build:
