--- a/.github/workflows/build-eudi-lib-sdjwt-swift.yml
+++ b/.github/workflows/build-eudi-lib-sdjwt-swift.yml
@@ -4,12 +4,15 @@
     pull_request:
       types: [opened, reopened]
     push:
-      branches: ['*']
+      branches: ['main']
       tags: [ v* ]
   jobs:
     build:
       runs-on: "macos-13"
       steps:
+        - uses: maxim-lobanov/setup-xcode@v1
+          with:
+            xcode-version: '14.3.1'
         - uses: actions/checkout@v4
         - run:
             fastlane tests
