--- a/.github/workflows/build-eudi-lib-sdjwt-swift.yml
+++ b/.github/workflows/build-eudi-lib-sdjwt-swift.yml
@@ -15,3 +15,13 @@
         - uses: actions/checkout@v4
         - run:
             fastlane tests
+    build_android:
+      runs-on: macos-13
+      steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+      - name: Run unit tests
+        uses: skiptools/swift-android-action@main
+        with:
+          swift-version: 6.0
+          ndk-version: 27.3.13750724
