--- a/.github/workflows/build-eudi-lib-sdjwt-swift.yml
+++ b/.github/workflows/build-eudi-lib-sdjwt-swift.yml
@@ -6,12 +6,19 @@
     push:
   
   jobs:
-    build:
-      runs-on: "macos-latest"
-      steps:
-        - uses: maxim-lobanov/setup-xcode@v1
-          with:
-            xcode-version: '26.0'
-        - uses: actions/checkout@v4
-        - run:
-            fastlane tests
+  build:
+    runs-on: macos-15
+    steps:
+      - uses: actions/checkout@v4
+
+      # use the preinstalled Xcode (more likely to have full platforms)
+      - name: Select Xcode
+        run: sudo xcode-select -s /Applications/Xcode.app/Contents/Developer
+
+      - name: Sanity check destinations
+        run: |
+          xcodebuild -version
+          xcodebuild -showsdks
+          xcodebuild -scheme eudi-lib-sdjwt-swift -showdestinations
+
+      - run: fastlane tests
