--- a/.github/workflows/build-eudi-lib-sdjwt-swift.yml
+++ b/.github/workflows/build-eudi-lib-sdjwt-swift.yml
@@ -7,11 +7,11 @@
   
   jobs:
     build:
-      runs-on: "macos-latest"
+      runs-on: macos-latest
       steps:
         - uses: maxim-lobanov/setup-xcode@v1
           with:
-            xcode-version: '26.0'
+            xcode-version: '26.1'
         - uses: actions/checkout@v4
         - run:
             fastlane tests
